# recoforge

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: routes_events.py  routes_items.py  routes_metrics.py  routes_reco.py  routes_users.py
app/core/: config.py
app/data/: datasets.py  seed.py
app/db/: models.py  session.py
app/reco/: content_based.py  metrics.py
tests/: conftest.py  test_api.py
